Version 1.0
----------------------------------------------------------------------
2006-09-15:
	* closed issue #1, added --with-all to configure
	* started using google-hosting for issuetracking
	  (http://code.google.com/p/alock)

2006-09-11:
	* made the timeout function more clear
	* only accept rlen < 50, dont increase it when it makes no sense
	* minor splint based mods

2006-06-01:
	* fixed gmake buildsystem

2006-05-29:
	* added a minimal configure / gmake buildsystem to make building easier
	* stop when no auth method is selected to prevent confusion

2006-05-05:
	* lock all screens if in X is running in multiscreen mode

2005-12-25:
	* added -auth sha256
	* added -auth sha384
	* added -auth sha512

2005-08-12:
	* added static=yes built option to scons

2005-06-01:
	* added -cursor image:file=<filename>, uses xrender and xpm/imlib2

2005-05-25:
	* solved problems install-problems: use at least scons 0.96.90
	* minor tweaks to buildsystem

2005-05-24:
	* updated documentation
	* updated buildsystem, scons install works
	* rewritten README to be also in asciidoc-format
	* more consistency in the ui, updated documentation
	* added -auth md5:file=<filename>
	* added -auth sha1:file=<filename>
	* rename -cursor font to -cursor glyph

2005-05-23:
	* added -bg image:shade=<perc>
	* little restructuring:
		- added alock_utils.c for shared code
		- mv bg_imlib2.c bg_image.c

2005-05-20:
	* added -bg shade:
		- shade=<perc> - percentage, 0 - 100
		- color=<color> - tint with <color>, default is "black"

2005-05-18:
	* fixed minor issues with defaults
	* deleted fancy contrib/xcursor-watch (too big)
	* added even more fancy contrib/xcursor-fluxbox
	* added -bg image:
		- name - name of the image
		- scale - scaling image
		- center - centering image
		- tile - tile image
		- color=<color> - use <color> as bg-color for centering
	* -bg blank uses the color-option now

2005-05-17:
	* restructuring almost done, polished interface: